--- a/Visualização_de_dados_com_Matplotlib.ipynb
+++ b/Visualização_de_dados_com_Matplotlib.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdWkxkX5uXRam7kyQOWK1r",
+      "authorship_tag": "ABX9TyMqq+48mZkgy30/XA4Tfiu8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -651,7 +651,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Exemplo com Dados Econômicos:**"
+        "///////////////////////// **Exemplo com Dados Econômicos:** ////////////////////"
       ],
       "metadata": {
         "id": "iMAT2aRuCLzD"
